--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ h2{
     font-size: 15px;
     width: 120px;
     height: 30px;
+    cursor: pointer;
     font-weight: bold;
     border: none;
     border-radius: 10px;
@@ -344,6 +345,7 @@ h2{
   .place-order-button:hover{
     color: white;
     background-color: black;
+    cursor: pointer;
   }
 
   .update-quantity-link{
