--- a/src/style.css
+++ b/src/style.css
@@ -12,41 +12,39 @@ h2{
 }
 
 .navbar{
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 0;
-    line-height: 30px;
-    height: 70px;
-    justify-content: space-between;
-    background-color: rgba(17, 17, 17, 0.945);
-    color: white;
-    border-radius: 15px;
-}
-
-.header-middle-section{
-  flex: 1;
   display: flex;
-  margin: 0px 20px 0px 70px;
+  flex-direction: row;
+  margin: 0;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0;
+  line-height: 30px;
+  height: 70px;
+  justify-content: space-between;
+  background-color: rgba(17, 17, 17, 0.945);
+  /* color: white; */
+  border-radius: 15px;
 
 }
 
-.header-right-section{
-  flex: 1;
+.navbar-title{
+  font-family: Belanosima;
+  padding-left: 20px;
+  font-size: 25px;
+  color: white;
+}
+.header-middle-section {
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
-  margin: 0px 20px 0px 20px;
-
 }
 
 .search-bar {
-  flex: 1;
-  width: 500px;
+  width: 300px;
   font-size: 16px;
   height: 38px;
-  padding-left: 15px;
   border: none;
+  margin-right: 5px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   border-top-right-radius: 0;
@@ -54,15 +52,47 @@ h2{
 }
 
 .search-button {
-  background-color: transparent;
+  position: relative;
+  background-color: orange;
   border: none;
-  width: 45px;
-  height: 36px;
+  width: 40px;
+  height: 38px;
+  padding: 0;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  flex-shrink: 0;
+  
 }
 
+.search-icon {
+  mix-blend-mode: color-burn;
+  height: 35px;
+  object-fit: cover;
+  border-radius: 10px;
+
+  /* margin-right: 4px;
+  margin-top: 2px; */
+}
+
+.header-right-section {
+  width: 180px;
+  flex-shrink: 0;
+  display: flex;
+}
+
+.orders-link {
+  color: white;
+}
+
+.returns-text {
+  display: block;
+  font-size: 13px;
+}
+
+.orders-text {
+  display: block;
+  font-size: 15px;
+  font-weight: 700;
+}
 
 .header-link {
   display: inline-block;
@@ -80,12 +110,16 @@ h2{
 .cart{
     position: relative;
     margin-right: 20px;
-    background-color: white;
+    height: 50px;
+    background-color: orangered;
     color: black;
-    padding: 10px;
+    padding: 7px;
     font-size: 30px;
     border-radius: 4px;
+    align-items: center;
     cursor: pointer;
+
+    top: 10px;
 }
 
 
@@ -183,7 +217,7 @@ button:hover {
 
 .items{
     background-color: beige;
-    height: 410px;
+    height: 435px;
     width: 250px;
     gap: 30px;
     margin: 8px 45px;
